--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,18 @@
         android:theme="@style/Theme.CollegeManagement"
         tools:targetApi="31">
         <activity
-            android:name=".select_observer"
-            android:exported="false" />
+            android:name=".SelectStaffActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".add_task"
             android:exported="false" />
         <activity
             android:name=".AddStaffActivity"
-            android:exported="false">
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
