--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 }
